# logging

./: LICENSE  README.md  meson.build
example/: logging.cpp
include/logging/: formatter.h  level.h  log.h  logger.h  logger_asynchronous.h  logger_synchronous.h  manager.h  record.h  sink.h  sink_console.h  sink_file.h
src/: formatter.cpp  level.cpp  log.cpp  logger.cpp  logger_asynchronous.cpp  logger_synchronous.cpp  manager.cpp  sink.cpp  sink_console.cpp  sink_file.cpp
